--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.5.3",
     "vue-notification": "^1.3.4",
     "vue-router": "^2.7.0",
+    "vue-sticky": "^3.3.1",
     "vuetify": "^0.17.0",
     "vuex": "^2.4.0",
     "vuex-persistedstate": "^2.0.0",
