--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.4",
     "vue": "^2.5.3",
     "vue-notification": "^1.3.4",
+    "vue-pdf": "^3.1.2",
     "vue-router": "^2.7.0",
     "vue-sticky": "^3.3.1",
     "vuetify": "^0.17.0",
