--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,7 +17,8 @@
     "lodash": "^4.17.4",
     "vue": "^2.5.3",
     "vue-notification": "^1.3.4",
-    "vue-pdf": "^3.1.2",
+    "vue-nvd3": "^1.0.0",
+    "vue-pdf": "^3.0.0",
     "vue-router": "^2.7.0",
     "vue-sticky": "^3.3.1",
     "vuetify": "^0.17.0",
